<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:padding="20dp"
    tools:context=".view.activity.LoginActivity">

    <!-- Titolo -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TitoloLayout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/LogoImageView_login"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/natour"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/NaTourTextView_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/InserisciCredenzialiTextView"
            app:layout_constraintLeft_toRightOf="@id/LogoImageView_login"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/InserisciCredenzialiTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/NaTourTextView_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/LogoImageView_login"
            android:fontFamily="sans-serif"
            android:text="@string/InserireCredenziali"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Form -->
    <ScrollView
        android:id="@+id/FormLayout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ConfermaLayout_login"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TitoloLayout_login"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UsernameTextInput_login"
                style="@style/NaTourAdmin.Login.TextInputLayout"
                android:hint="@string/Username"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UsernameEditText_login"
                    style="@style/NatourAdmin.Login.TextInputLayout.EditText"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PasswordLayout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PasswordTextInput_login"
                    style="@style/NaTourAdmin.Login.TextInputLayout"
                    android:hint="@string/Password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PasswordEditText_login"
                        style="@style/NatourAdmin.Login.TextInputLayout.EditText"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Conferma -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConfermaLayout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FormLayout_login">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ConfermaButton_login"
            style="@style/NaTourAdmin.NuovoItinerario.MaterialButton"
            android:layout_width="150dp"
            android:backgroundTint="@color/verde_chiaro"
            android:elevation="10dp"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>